<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.home.HomeFragment">

    <TextView
            android:text="@string/offline"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/stateTextView"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textAlignment="center"
            android:textStyle="bold|italic"
            android:textAllCaps="false"
            android:background="@color/colorOffline"
            app:layout_constraintBottom_toTopOf="@id/temperatureTextView"/>

    <TextView
            android:text="@string/textview_temperature"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/temperatureTextView"
            android:background="@drawable/temperature_gradient"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:textAlignment="center"
            android:textStyle="bold"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toBottomOf="@+id/stateTextView"
            app:layout_constraintBottom_toTopOf="@+id/temperatureRangeSeekBar"
            android:textSize="32sp"/>

    <com.jaygoo.widget.RangeSeekBar
            android:id="@+id/temperatureRangeSeekBar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:rsb_mode="range"
            app:rsb_min="-50"
            app:rsb_max="50"
            app:rsb_min_interval="0"
            app:rsb_progress_height="4dp"
            app:rsb_progress_radius="4dp"
            app:rsb_progress_color="@color/colorTemperature"
            app:rsb_thumb_width="16dp"
            app:rsb_thumb_height="16dp"
            app:rsb_thumb_scale_ratio="1.2"
            app:rsb_thumb_drawable="@drawable/thumb_temperature_stroke"
            app:rsb_indicator_show_mode="alwaysShow"
            app:rsb_indicator_height="30dp"
            app:rsb_indicator_width="50dp"
            app:rsb_indicator_radius="10dp"
            app:rsb_indicator_background_color="@color/colorTemperature"
            app:rsb_tick_mark_mode="number"
            app:rsb_tick_mark_gravity="center"
            app:rsb_tick_mark_layout_gravity="bottom"
            app:rsb_tick_mark_text_margin="10dp"
            app:rsb_tick_mark_text_array="@array/temperatureArray"
            app:layout_constraintTop_toBottomOf="@+id/temperatureTextView"
            app:layout_constraintEnd_toEndOf="@+id/temperatureTextView"
            app:layout_constraintStart_toStartOf="@+id/temperatureTextView"
            app:layout_constraintBottom_toTopOf="@+id/humidityTextView"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"/>

    <TextView
            android:text="@string/textview_humidity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/humidityTextView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@drawable/humidity_gradient"
            android:textAlignment="center"
            android:textStyle="bold"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toBottomOf="@+id/temperatureRangeSeekBar"
            app:layout_constraintBottom_toTopOf="@+id/humidityRangeSeekBar"
            android:textSize="32sp"/>

    <com.jaygoo.widget.RangeSeekBar
            android:id="@+id/humidityRangeSeekBar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:rsb_mode="range"
            app:rsb_min="0"
            app:rsb_max="100"
            app:rsb_min_interval="0"
            app:rsb_progress_height="4dp"
            app:rsb_progress_radius="4dp"
            app:rsb_progress_color="@color/colorHumidity"
            app:rsb_thumb_width="16dp"
            app:rsb_thumb_height="16dp"
            app:rsb_thumb_scale_ratio="1.2"
            app:rsb_thumb_drawable="@drawable/thumb_humidity_stroke"
            app:rsb_indicator_show_mode="alwaysShow"
            app:rsb_indicator_height="30dp"
            app:rsb_indicator_width="50dp"
            app:rsb_indicator_radius="10dp"
            app:rsb_indicator_background_color="@color/colorHumidity"
            app:rsb_tick_mark_mode="other"
            app:rsb_tick_mark_gravity="center"
            app:rsb_tick_mark_layout_gravity="bottom"
            app:rsb_tick_mark_text_margin="10dp"
            app:rsb_tick_mark_text_array="@array/humidityArray"
            app:layout_constraintEnd_toEndOf="@+id/humidityTextView"
            app:layout_constraintStart_toStartOf="@+id/humidityTextView"
            app:layout_constraintTop_toBottomOf="@+id/humidityTextView"
            app:layout_constraintBottom_toTopOf="@+id/illuminationTextView"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"/>

    <TextView
            android:text="@string/textview_illumination"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/illuminationTextView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@drawable/illumination_gradient"
            android:textAlignment="center"
            android:textStyle="bold"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toBottomOf="@+id/humidityRangeSeekBar"
            app:layout_constraintBottom_toTopOf="@+id/illuminationRangeSeekBar"
            android:textSize="32sp"/>

    <com.jaygoo.widget.RangeSeekBar
            android:id="@+id/illuminationRangeSeekBar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:rsb_mode="range"
            app:rsb_min="0"
            app:rsb_max="10000"
            app:rsb_min_interval="0"
            app:rsb_progress_height="4dp"
            app:rsb_progress_radius="4dp"
            app:rsb_progress_color="@color/colorIlluminance"
            app:rsb_thumb_width="16dp"
            app:rsb_thumb_height="16dp"
            app:rsb_thumb_scale_ratio="1.2"
            app:rsb_thumb_drawable="@drawable/thumb_illumination_stroke"
            app:rsb_indicator_show_mode="alwaysShow"
            app:rsb_indicator_height="30dp"
            app:rsb_indicator_width="50dp"
            app:rsb_indicator_radius="10dp"
            app:rsb_indicator_background_color="@color/colorIlluminance"
            app:rsb_tick_mark_mode="other"
            app:rsb_tick_mark_gravity="center"
            app:rsb_tick_mark_layout_gravity="bottom"
            app:rsb_tick_mark_text_margin="10dp"
            app:rsb_tick_mark_text_array="@array/illuminanceArray"
            app:layout_constraintStart_toStartOf="@+id/illuminationTextView"
            app:layout_constraintEnd_toEndOf="@+id/illuminationTextView"
            app:layout_constraintBottom_toTopOf="@+id/setFlagButton"
            app:layout_constraintTop_toBottomOf="@+id/illuminationTextView"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"/>

    <Button
            android:text="@string/set_flag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/setFlagButton"
            android:textAlignment="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/ledUpButton"
            app:layout_constraintTop_toBottomOf="@+id/illuminationRangeSeekBar"
            />

    <ToggleButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/ledToggleButton"
            android:background="@drawable/toggle_button_background"
            app:layout_constraintEnd_toStartOf="@+id/alarmToggleButton"
            app:layout_constraintStart_toStartOf="parent"
            android:textOff="@string/toggle_button_led"
            android:textOn="@string/toggle_button_led"
            app:layout_constraintTop_toBottomOf="@+id/ledUpButton"
            app:layout_constraintBottom_toTopOf="@+id/ledDownButton"
            android:textAlignment="center"
            android:textStyle="bold"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"/>

    <ToggleButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/alarmToggleButton"
            android:background="@drawable/toggle_button_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/ledToggleButton"
            android:textOff="@string/toggle_button_alarm"
            android:textOn="@string/toggle_button_alarm"
            app:layout_constraintTop_toBottomOf="@+id/alarmUpButton"
            app:layout_constraintBottom_toTopOf="@+id/alarmDownButton"
            android:textAlignment="center"
            android:textStyle="bold"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"/>

    <Button
            android:text="@string/up"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/ledUpButton"
            app:layout_constraintEnd_toStartOf="@+id/alarmUpButton"
            app:layout_constraintStart_toStartOf="parent"
            android:textAlignment="center"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            app:layout_constraintTop_toBottomOf="@+id/setFlagButton"
            app:layout_constraintBottom_toTopOf="@+id/ledToggleButton"/>

    <Button
            android:text="@string/up"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/alarmUpButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/ledUpButton"
            android:textAlignment="center"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toBottomOf="@+id/setFlagButton"
            app:layout_constraintBottom_toTopOf="@+id/alarmToggleButton"/>

    <Button
            android:text="@string/down"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/ledDownButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/alarmDownButton"
            android:textAlignment="center"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toBottomOf="@+id/ledToggleButton"
            app:layout_constraintBottom_toBottomOf="parent"
            />

    <Button
            android:text="@string/down"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/alarmDownButton"
            app:layout_constraintStart_toEndOf="@+id/ledDownButton"
            app:layout_constraintEnd_toEndOf="parent"
            android:textSize="16sp"
            android:textAlignment="center"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            app:layout_constraintTop_toBottomOf="@+id/alarmToggleButton"
            app:layout_constraintBottom_toBottomOf="parent"
            />
</androidx.constraintlayout.widget.ConstraintLayout>